--- a/style.css
+++ b/style.css
@@ -3,7 +3,18 @@
 }
 
 .chart text {
-  fill: white;
+  /*fill: white;*/
   font: 10px sans-serif;
-  text-anchor: end;
+  text-anchor: middle;
+}
+
+.axis text {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
 }
